--- a/behrend-lion-ambassadors/Gemfile
+++ b/behrend-lion-ambassadors/Gemfile
@@ -43,3 +43,8 @@ group :development, :test do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 end
+
+gem 'ruby-gmail', '0.3.1'
+gem 'bootstrap-sass', '~> 3.1.1'
+gem 'bootstrap_form'
+gem 'simple_form'
